# Proyecto-Practicas

./: .gitignore  README.md  json_to_excel.py  main.py  pyproject.toml
