[project]
name = "wildcam"
version = "0.1.0"
description = "Detección de fauna en cámaras trampa usando MegaDetector v5"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.66.0",
    "ultralytics>=8.0.0",
]
